@@ -2,6 +2,8 @@ Revision history for Metabase-Fact
 
 0.008
 
+  - Fixed failing tests on 5.6.1 due to problems in overloaded
+    stringification of Metabase::Resource [Ricardo Signes, Apocalypse]
 
 0.007 Fri Mar 19 07:51:07 EDT 2010
 
